--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,7 +11,8 @@
     "dev:ssr": "ng run spaceX:serve-ssr",
     "serve:ssr": "node dist/spaceX/server/main.js",
     "build:ssr": "ng build --prod && ng run spaceX:server:production",
-    "prerender": "ng run spaceX:prerender"
+    "prerender": "ng run spaceX:prerender",
+	"heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -25,10 +26,14 @@
     "@angular/platform-server": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@nguniversal/express-engine": "^11.2.0",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+	 "@angular/cli": "~11.2.2",
+    "@angular/compiler-cli": "~11.2.3",
+	 "typescript": "~4.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.2",
@@ -50,5 +55,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
